--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
-pandas
-numpy
-matplotlib
-torch
-transformers
-scikit-learn
-yfinance
+streamlit==1.32.0
+pandas==2.1.0
+numpy==1.24.0
+matplotlib==3.7.0
+torch==2.0.1
+transformers==4.33.0
+scikit-learn==1.3.0
+yfinance==0.2.28
+tornado==6.3.3  # Thêm dòng này để fix xung đột
