--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit==1.32.0
-pandas==2.1.0
-numpy==1.24.0
-matplotlib==3.7.0
-torch==2.0.1
-transformers==4.33.0
-scikit-learn==1.3.0
+streamlit==1.32.2
+pandas==2.1.3
+numpy==1.26.0
+matplotlib==3.8.0
+torch==2.1.0 --extra-index-url https://download.pytorch.org/whl/cpu
+transformers==4.35.0
+scikit-learn==1.3.2
 yfinance==0.2.28
-tornado==6.3.3  # Thêm dòng này để fix xung đột
+tornado==6.3.3
+pip==24.0  # Giữ phiên bản pip ổn định
