--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 pip
-streamlit==1.32.2
-pandas==2.1.3
-numpy==1.26.0
-matplotlib==3.8.0
-torch==2.1.0 --extra-index-url https://download.pytorch.org/whl/cpu
-transformers==4.35.0
-scikit-learn==1.3.2
-yfinance==0.2.28
-tornado==6.3.3
+streamlit
+pandas
+numpy
+matplotlib
+torch
+transformers
+scikit-learn
+yfinance
